fixed background covering

--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,13 @@
   box-sizing: border-box;
 }
 
-/* .background {
-  min-height: 100vh;
-  height: auto;
-} */
+
+body {
+  scrollbar-width: none;
+  -ms-overflow-style: none;
+}
+
+body::-webkit-scrollbar {
+  display: none;
+}
+
